[package]
name = "npc-engine"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
exempi = { version = "2.6.0", git = "https://github.com/hfiguiere/exempi-rs.git", rev="99e8ba5" }
gdk-pixbuf-sys = "*"
gdk-pixbuf = "*"
glib = "*"
lazy_static = "^1.2.0"
libc = "0.2.39"
maplit = "1.0.2"
rusqlite = { version = "0.14.0", features = ["functions"] }
try_opt = "0.1.1"

npc-fwk = { path = "../npc-fwk" }

[build-dependencies]
cbindgen = { version = "0.19.0" }
