[package]
name = "npc-fwk"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "*"
chrono = "0.4.0"
exempi = { version = "2.5.0", git = "https://github.com/hfiguiere/exempi-rs.git", rev="53cfc05" }
gio-sys = "*"
gio = "^0.8.0"
glib-sys = "*"
glib = { version = "^0.9.3" }
gtk-sys = "*"
gdk = "^0.12.0"
gdk-pixbuf-sys = "*"
gdk-pixbuf = { version = "0.8.0", features = [ "v2_32" ] }
gtk = { version = "^0.8.1" }
libc = "0.2.39"
multimap = "0.4.0"
once_cell = "^0"
rexiv2 = "^0.7.0"
try_opt = "0.1.1"


[build-dependencies]
cbindgen = { version = "0.13.1" }
