[package]
name = "npc-fwk"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
cairo-rs = "*"
chrono = "0.4.0"
exempi = { version = "2.6.0", git = "https://github.com/hfiguiere/exempi-rs.git", rev="99e8ba5" }
gio-sys = "*"
gio = "^0.14.0"
glib-sys = "*"
glib = "^0.14.0"
gtk-sys = "*"
gdk = "^0.14.0"
gdk-pixbuf-sys = "*"
gdk-pixbuf = "^0.14.0"
gtk = "^0.14.0"
lazy_static = "^1.2.0"
libc = "0.2.39"
libopenraw-rs = { path = "../../../libopenraw-rs/libopenraw-rs" }
# { git = "https://gitlab.freedesktop.org/libopenraw/libopenraw-rs.git", rev = "edae9f8771fa4f4b577ef2e56d9dbd6f68d97105" }
multimap = "0.4.0"
once_cell = "1.8.0"
rexiv2 = "^0.9.1"
try_opt = "0.1.1"


[build-dependencies]
cbindgen = { version = "0.19.0" }
