

iconsdir = @datarootdir@/niepce/pixmaps/
dist_icons_DATA = niepce-jpg-fmt.png niepce-raw-fmt.png niepce-rawjpeg-fmt.png\
	niepce-tiff-fmt.png niepce-png-fmt.png\
	niepce-img-fmt.png niepce-unknown-fmt.png niepce-video-fmt.png\
	niepce-set-star.png niepce-unset-star.png\
	niepce-rotate-left.png niepce-rotate-right.png \
	niepce-flag-pick.png niepce-flag-reject.png  \
	niepce-transform-rotate.png \
	niepce-image-generic.png \
	$(NULL)
