

noinst_LIBRARIES = libgdl.a

AM_CPPFLAGS = @LIBGTKMM_CFLAGS@ -I$(srcdir)/..

libgdl_a_SOURCES =	\
	gdl-tools.h		\
	gdl-dock-object.h	\
	gdl-dock-master.h	\
	gdl-dock.h		\
	gdl-dock-item.h		\
	gdl-dock-notebook.h	\
	gdl-dock-paned.h	        \
	gdl-dock-tablabel.h	\
	gdl-dock-placeholder.h	\
	gdl-dock-bar.h		\
	gdl-stock.h		\
	gdl-stock-icons.h	\
	gdl-i18n.h		\
	gdl-i18n.c		\
	gdl-dock-object.c	\
	gdl-dock-master.c	\
	gdl-dock.c		\
	gdl-dock-item.c		\
	gdl-dock-item-grip.h	\
	gdl-dock-item-grip.c	\
	gdl-dock-notebook.c	\
	gdl-dock-paned.c		\
	gdl-dock-tablabel.c	\
	gdl-dock-placeholder.c	\
	gdl-dock-bar.c		\
	gdl-stock.c		\
	gdl-switcher.h		\
	gdl-switcher.c		\
	libgdltypebuiltins.h	\
	libgdltypebuiltins.c	\
	libgdlmarshal.h		\
	libgdlmarshal.c		\
	libgdl.h		

